--- a/src/Langgraph_Agentic_AI/ui/uiconfigfile.ini
+++ b/src/Langgraph_Agentic_AI/ui/uiconfigfile.ini
@@ -1,6 +1,6 @@
 [DEFAULT]
 PAGE_TITLE = LangGraph: Build Stateful Agentic AI Graph
 LLM_OPTIONS = Groq, OpenAI
-USECASE_OPTIONS = Basic Chatbot, Chatbot with Tool, AI News, Blog Generator
+USECASE_OPTIONS = Basic Chatbot, Chatbot with Web Search, AI News, Blog Generator
 GROQ_MODEL_OPTIONS = llama-3.3-70b-versatile, llama-3.1-8b-instant, qwen/qwen3-32b
 OPENAI_MODEL_OPTIONS =  gpt-4o-mini, gpt-5-nano
